Enhance promo and announcement flows, update dashboard stats
Redirect to detail pages after creating promos and announcements. Improve promo detail page with status badge, publish button for drafts, and support for absolute video/caption URLs. Update dashboard to use nested stats properties. Fix event registration and feedback to use string event IDs. Adjust logout redirect path. Add new announcement audio and promo video files.

--- a/frontend/announcement-detail.html
+++ b/frontend/announcement-detail.html
@@ -146,7 +146,7 @@
             
             // Render audio player
             const audioUrl = announcement.audio_url 
-                ? `${CONFIG.UPLOADS_BASE_URL}/announcements/${announcement.audio_url}`
+                ? (announcement.audio_url.startsWith('http') ? announcement.audio_url : `${CONFIG.UPLOADS_BASE_URL}/announcements/${announcement.audio_url}`)
                 : null;
             
             if (audioUrl) {
