--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -228,7 +228,7 @@
                     <div class="flex items-center justify-between">
                         <div>
                             <p class="text-sm font-medium text-gray-600 mb-2">Total Events</p>
-                            <p class="text-3xl font-bold text-gray-900">${stats.total_events || 0}</p>
+                            <p class="text-3xl font-bold text-gray-900">${stats.events?.total_events || 0}</p>
                         </div>
                         <div class="bg-green-100 rounded-full p-3">
                             <svg class="w-8 h-8 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -243,7 +243,7 @@
                     <div class="flex items-center justify-between">
                         <div>
                             <p class="text-sm font-medium text-gray-600 mb-2">Total Users</p>
-                            <p class="text-3xl font-bold text-gray-900">${stats.total_users || 0}</p>
+                            <p class="text-3xl font-bold text-gray-900">${stats.users?.total_users || 0}</p>
                         </div>
                         <div class="bg-blue-100 rounded-full p-3">
                             <svg class="w-8 h-8 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -258,7 +258,7 @@
                     <div class="flex items-center justify-between">
                         <div>
                             <p class="text-sm font-medium text-gray-600 mb-2">Total Registrations</p>
-                            <p class="text-3xl font-bold text-gray-900">${stats.total_registrations || 0}</p>
+                            <p class="text-3xl font-bold text-gray-900">${stats.registrations?.total_registrations || 0}</p>
                         </div>
                         <div class="bg-purple-100 rounded-full p-3">
                             <svg class="w-8 h-8 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
