--- a/frontend/announcements.html
+++ b/frontend/announcements.html
@@ -16,96 +16,74 @@
     <!-- Header will be injected here by GlobalNav -->
     
     <!-- Main Content -->
-    <main class="flex-1">
+    <main class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 py-8 space-y-8">
         <!-- Hero -->
-        <section class="bg-gradient-to-r from-purple-700 via-purple-600 to-fuchsia-500 text-white">
-            <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-12 lg:py-16">
-                <div class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-8">
-                    <div class="space-y-4 max-w-3xl">
-                        <p class="inline-flex items-center bg-white/10 px-3 py-1 rounded-full text-sm font-semibold tracking-wide">
-                            <span class="flex h-2 w-2 rounded-full bg-white mr-2 animate-pulse"></span>
-                            Fresh airwaves
-                        </p>
-                        <h1 class="text-4xl lg:text-5xl font-black leading-tight drop-shadow">Audio Announcements</h1>
-                        <p class="text-lg text-white/90 max-w-2xl">Tune into quick-hit updates, service alerts, and stories from our community leaders.</p>
-                        <div class="flex flex-wrap gap-3" id="hero-actions">
-                            <a href="#announcement-grid" class="btn-primary">Browse updates</a>
-                            <button id="refresh-announcements" class="btn-secondary" type="button">Refresh list</button>
-                        </div>
+        <section class="event-collection-hero">
+            <div class="space-y-3">
+                <p class="hero-kicker">CivicEvents+ announcements</p>
+                <h1 class="hero-title">Audio Announcements</h1>
+                <p class="hero-subtitle">Tune into quick-hit updates, service alerts, and stories from our community leaders.</p>
+                <div class="hero-stats-grid">
+                    <div class="hero-stat">
+                        <p id="announcement-total" class="hero-stat-value">--</p>
+                        <p class="hero-stat-label">Total announcements</p>
                     </div>
-                    <div class="w-full lg:w-auto">
-                        <div class="glass-card text-gray-900">
-                            <div class="flex items-center justify-between mb-4">
-                                <div>
-                                    <p class="text-sm text-gray-500">Total announcements</p>
-                                    <p id="announcement-total" class="text-3xl font-bold text-gray-900">--</p>
-                                </div>
-                                <div class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-semibold">
-                                    Audio hub
-                                </div>
-                            </div>
-                            <div class="grid grid-cols-2 gap-3 text-sm">
-                                <div class="stat-tile">
-                                    <p class="text-gray-500">Published</p>
-                                    <p id="announcement-published" class="text-xl font-semibold text-gray-900">--</p>
-                                </div>
-                                <div class="stat-tile">
-                                    <p class="text-gray-500">Drafts</p>
-                                    <p id="announcement-drafts" class="text-xl font-semibold text-gray-900">--</p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="hero-stat">
+                        <p id="announcement-published" class="hero-stat-value">--</p>
+                        <p class="hero-stat-label">Published</p>
+                    </div>
+                    <div class="hero-stat">
+                        <p id="announcement-drafts" class="hero-stat-value">--</p>
+                        <p class="hero-stat-label">Drafts</p>
                     </div>
                 </div>
+            </div>
+            <div class="hero-actions">
+                <p class="hero-actions-title">Quick filters</p>
+                <div class="quick-filter-group" role="group" aria-label="Quick announcement filters">
+                    <button type="button" class="quick-filter-btn active" data-filter="all">All updates</button>
+                    <button type="button" class="quick-filter-btn" data-filter="published">Published</button>
+                    <button type="button" class="quick-filter-btn" data-filter="draft">Drafts</button>
+                </div>
+                <button id="refresh-announcements" class="btn-modern-outline" type="button">Refresh list</button>
+                <div id="admin-actions" class="mt-4"></div>
             </div>
         </section>
 
         <!-- Controls + List -->
-        <section id="announcement-grid" class="container mx-auto px-4 sm:px-6 lg:px-8 -mt-10 lg:-mt-14 relative z-10 pb-12">
-            <div class="bg-white rounded-2xl shadow-xl p-6 lg:p-8">
-                <div class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-4 mb-6">
-                    <div class="space-y-1">
-                        <p class="text-sm font-semibold text-purple-700">Announcements Board</p>
-                        <p class="text-gray-600">Listen, skim transcripts, and follow along with the latest recorded updates.</p>
+        <section id="announcement-grid" class="space-y-6">
+            <div class="event-filters-panel">
+                <div class="grid md:grid-cols-4 gap-4 items-end">
+                    <div class="md:col-span-2">
+                        <label for="search-announcements" class="filter-label">Search announcements</label>
+                        <input
+                            type="text"
+                            id="search-announcements"
+                            placeholder="Search announcements by title..."
+                            class="filter-input"
+                        >
                     </div>
-                    <div id="admin-actions" class="flex-shrink-0"></div>
-                </div>
-
-                <div class="flex flex-col lg:flex-row lg:items-center lg:justify-between gap-4 mb-6">
-                    <div class="w-full lg:w-1/2 flex items-center gap-3">
-                        <div class="relative flex-1">
-                            <span class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400">
-                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 1016.65 16.65z"></path>
-                                </svg>
-                            </span>
-                            <input
-                                type="text"
-                                id="search-announcements"
-                                placeholder="Search announcements by title..."
-                                class="w-full pl-10 pr-4 py-2.5 border border-gray-200 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent"
-                            >
-                        </div>
-                        <div class="hidden lg:block h-10 w-px bg-gray-200"></div>
-                        <div class="flex items-center gap-2">
-                            <button class="filter-chip active" data-filter="all">All</button>
-                            <button class="filter-chip" data-filter="published">Published</button>
-                            <button class="filter-chip" data-filter="draft">Drafts</button>
-                        </div>
-                    </div>
-                    <div class="flex items-center gap-3 w-full lg:w-auto">
-                        <label class="text-sm text-gray-600" for="announcement-sort">Sort</label>
-                        <select id="announcement-sort" class="px-3 py-2 border border-gray-200 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent">
+                    <div>
+                        <label for="announcement-sort" class="filter-label">Sort</label>
+                        <select id="announcement-sort" class="filter-input">
                             <option value="newest">Newest first</option>
                             <option value="oldest">Oldest first</option>
                         </select>
                     </div>
+                    <div>
+                        <label class="filter-label">Status</label>
+                        <div class="quick-filter-group">
+                            <button type="button" class="quick-filter-btn active" data-filter="all">All</button>
+                            <button type="button" class="quick-filter-btn" data-filter="published">Live</button>
+                            <button type="button" class="quick-filter-btn" data-filter="draft">Drafts</button>
+                        </div>
+                    </div>
                 </div>
+            </div>
 
-                <!-- Announcements List -->
-                <div id="announcements-container" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6" aria-live="polite">
-                    <!-- Announcements will be loaded here -->
-                </div>
+            <!-- Announcements List -->
+            <div id="announcements-container" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6" aria-live="polite">
+                <!-- Announcements will be loaded here -->
             </div>
         </section>
     </main>
@@ -155,10 +133,11 @@
             });
 
             // Filter chips
-            $('.filter-chip').on('click', function() {
-                $('.filter-chip').removeClass('active');
-                $(this).addClass('active');
-                currentAnnouncementFilter = $(this).data('filter');
+            $('.quick-filter-btn').on('click', function() {
+                const value = $(this).data('filter');
+                currentAnnouncementFilter = value;
+                $('.quick-filter-btn').removeClass('active');
+                $(`.quick-filter-btn[data-filter="${value}"]`).addClass('active');
                 applyAnnouncementFilters();
             });
 
@@ -251,7 +230,7 @@
                                         ${announcement.published ? `
                                             <button
                                                 onclick="unpublishAnnouncement(${announcement.id})"
-                                                class="btn-secondary text-sm"
+                                                class="btn-modern-outline text-sm"
                                                 title="Unpublish"
                                             >
                                                 Unpublish
@@ -259,7 +238,7 @@
                                         ` : `
                                             <button
                                                 onclick="publishAnnouncement(${announcement.id})"
-                                                class="btn-primary text-sm"
+                                                class="btn-modern-primary text-sm"
                                                 title="Publish"
                                             >
                                                 Publish
@@ -296,7 +275,7 @@
                             <div class="flex items-center justify-between gap-3">
                                 <a
                                     href="announcement-detail.html?id=${announcement.id}"
-                                    class="btn-primary flex-1 text-center"
+                                    class="btn-modern-primary flex-1 text-center"
                                 >
                                     View details
                                 </a>
@@ -354,7 +333,7 @@
 
         function renderAnnouncementCtas() {
             const createButton = `
-                <a href="announcement-create.html" class="btn-primary inline-flex items-center">
+                <a href="announcement-create.html" class="btn-modern-primary inline-flex items-center">
                     <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
                     </svg>
@@ -365,7 +344,7 @@
             $('#admin-actions').html(createButton);
 
             if (!$('#hero-actions .create-announcement').length) {
-                $('#hero-actions').append(createButton.replace('btn-primary', 'btn-secondary create-announcement'));
+                $('#hero-actions').append(createButton.replace('btn-modern-primary', 'btn-modern-outline create-announcement'));
             }
         }
         
